tests/fixtures/invalid/divmod_str_set.py
# Cannot call divmod() with Str, Set[int]
x = divmod("hello", {1, 2, 3})
